' Copyright (C) 2023 - present Juergen Zimmermann, Hochschule Karlsruhe
'
' This program is free software: you can redistribute it and/or modify
' it under the terms of the GNU General Public License as published by
' the Free Software Foundation, either version 3 of the License, or
' (at your option) any later version.
'
' This program is distributed in the hope that it will be useful,
' but WITHOUT ANY WARRANTY; without even the implied warranty of
' MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
' GNU General Public License for more details.
'
' You should have received a copy of the GNU General Public License
' along with this program.  If not, see <https://www.gnu.org/licenses/>.

' Preview durch <Alt>d

@startuml er-diagramm

hide circle
skinparam linetype ortho

entity "artist" as artist {
  * id : integer <<generated>>
  --
  * version : integer
  * name : text
  * email : text <<unique>>
  * geburtsdatum : date
  * username : text
  * erzeugt : timestamp
  * aktualisiert : timestamp
}

entity "song" as song {
  * id : integer <<generated>>
  --
  * titel : text
  * erscheinungsdatum : date
  * dauer : integer
    genres : JSON
}

entity "song_artist" as song_artist {
  * song_id : integer <<PK, FK>>
  * artist_id : integer <<PK, FK>>
}

entity "vertrag" as vertrag {
  * id : integer <<generated>>
  --
  * startdatum : date
  * enddatum : date
  * dauer : integer
  * firma : text
  * gehalt : decimal
  * artist_id : integer <<unique, FK>>
}

artist ||--|| vertrag
artist ||--o{ song_artist
song ||--|{ song_artist

footer Chora

@enduml
